--- a/promisedebugger/src/stylesheet.css
+++ b/promisedebugger/src/stylesheet.css
@@ -18,6 +18,9 @@ body,html{
 .runCode {
   cursor: pointer;
 }
+.loadButton{
+  cursor:pointer;
+}
 
 .stopCode {
   cursor: pointer;
@@ -86,6 +89,7 @@ body,html{
 .timelineCompWrapper{
   position: absolute;
   bottom:0;
+  left:0px;
   width:100%;
   height:30px;
   background:rgba(70,70,70,.8);
